[fix]error  collapse ,chevronIcon and page About

--- a/kasa/src/pages/About/About.scss
+++ b/kasa/src/pages/About/About.scss
@@ -47,17 +47,17 @@
   color:  white;
 }
 
-.expanded-text {
-  width: 60%;
-  height: auto;
-  margin: 0 auto;
-  background-color: #F7F7F7;
-  padding: 16px;
-  p {
-    margin: 0;
-    color: #FF6060;
-  }
-}
+// .expanded-text {
+//   width: 60%;
+//   height: auto;
+//   margin: 0 auto;
+//   background-color: #F7F7F7;
+//   padding: 16px;
+//   p {
+//     margin: 0;
+//     color: #FF6060;
+//   }
+// }
 
 .collapsed-text {
   height: 0;
@@ -72,8 +72,8 @@
   border-radius: 0 0 7px 7px;
 }
 
-@media screen and (max-width: 500px) {
-  .list-item,.expanded-text,.collapsed-text {
-    width: 80%;
-  }
-}
+// @media screen and (max-width: 500px) {
+//   .list-item,.expanded-text,.collapsed-text {
+//     width: 80%;
+//   }
+// }
